--- a/client/src/components/topbar/topBar.css
+++ b/client/src/components/topbar/topBar.css
@@ -6,6 +6,7 @@
     top: 0;
     display: flex;
     align-items: center;
+    z-index: 9;
 }
 
 .topLeft, .topRight {
@@ -55,4 +56,11 @@
     color: #666;
     cursor: pointer;
     margin-left: 15px;
+}
+
+.links {
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 10px;
 }
